# dart_embed

./: CMakeLists.txt  README.md  TODO.md
cmd/: main.cpp
include/: dart_embed.h
kernel/: test.dart  test.dill
src/: isolate.cpp  setup.cpp
